--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -25,18 +25,66 @@
             <div class="card-body">
                 <button type="button" onclick="getProducto('Celulares')" class="btn btn-secondary">Celulares</button>
                 <button type="button" onclick="getProducto('Laptops')" class="btn btn-secondary">Laptops</button>
-                <button type="button" onclick="getProducto('Camaras y video')" class="btn btn-secondary">Camaras y video</button>
+                <button type="button" onclick="getProducto('Camaras y video')" class="btn btn-secondary">Camaras y
+                    video</button>
                 <button type="button" onclick="getProducto('Telefonia')" class="btn btn-secondary">Telefonia</button>
                 <button type="button" onclick="getProducto('Consolas')" class="btn btn-secondary">Consolas</button>
-                <button type="button" onclick="getProducto('Videojuegos')" class="btn btn-secondary">Videojuegos</button>
-                <button type="button" onclick="getProducto('Acesorios de videojuegos')" class="btn btn-secondary">Acesorios de videojuegos</button>
+                <button type="button" onclick="getProducto('Videojuegos')"
+                    class="btn btn-secondary">Videojuegos</button>
+                <button type="button" onclick="getProducto('Acesorios de videojuegos')"
+                    class="btn btn-secondary">Acesorios de videojuegos</button>
                 <button type="button" onclick="getProducto('Audifonos')" class="btn btn-secondary">Audifonos</button>
             </div>
         </div>
         <div id="MercadoLibre">
         </div>
+        <h4>Carrito de compras</h4>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">A/Q</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody id="items"></tbody>
+            <tfoot>
+                <tr id="footer">
+                    <th scope="row" colspan="5">Que esperas para gastar tu dinero? >:V </th>
+                </tr>
+            </tfoot>
+        </table>
     </div>
+    <template id="template-footer">
+        <th scope="row" colspan="2">Total productos</th>
+        <td>10</td>
+        <td>
+            <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+                vaciar todo
+            </button>
+        </td>
+        <td class="font-weight-bold">$ <span>5000</span></td>
+    </template>
+    <template id="template-carrito">
+        <tr>
+            <th scope="row">id</th>
+            <td>Café</td>
+            <td>1</td>
+            <td>
+                <button class="btn btn-danger btn-sm">
+                    -
+                </button>
+                <button class="btn btn-info btn-sm">
+                    +
+                </button>
+            </td>
+            <td>$ <span>500</span></td>
+        </tr>
+    </template>
 
     <script src="../BackEnd/index.js"></script>
 </body>
+
 </html>
