--- a/FrontEnd/carrito.html
+++ b/FrontEnd/carrito.html
@@ -14,6 +14,7 @@
     <title>Carrito</title>
 </head>
 <body>
+    <div id="MercadoLibre"></div>
     <div class="container">
         <h4>Carrito de compras</h4>
         <table class="table">
