--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,15 +10,13 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <title>Tecler Tienda</title>
+    <title>Tienda Virtual</title>
 </head>
 <body>
     <div class="container">
         <div class="search-bar">
             <img src="./assets/img/tecla.png" class="logo">
-            <a href="./carrito.html">
-            <button type="button" onclick="addCarrito()" class="btn btn-outline-dark">Carrito</button>
-        </a>
+            <button type="button" onclick="" class="btn btn-outline-dark">Carrito</button>
             <input type="text" placeholder="Buscar..." id='search'>
             <button type="button" onclick="buscar()" class="search-icon">Buscar</button>
         </div>
@@ -27,18 +25,67 @@
             <div class="card-body">
                 <button type="button" onclick="getProducto('Celulares')" class="btn btn-secondary">Celulares</button>
                 <button type="button" onclick="getProducto('Laptops')" class="btn btn-secondary">Laptops</button>
-                <button type="button" onclick="getProducto('Camaras y video')" class="btn btn-secondary">Camaras y video</button>
+                <button type="button" onclick="getProducto('Camaras y video')" class="btn btn-secondary">Camaras y
+                    video</button>
                 <button type="button" onclick="getProducto('Telefonia')" class="btn btn-secondary">Telefonia</button>
                 <button type="button" onclick="getProducto('Consolas')" class="btn btn-secondary">Consolas</button>
-                <button type="button" onclick="getProducto('Videojuegos')" class="btn btn-secondary">Videojuegos</button>
-                <button type="button" onclick="getProducto('Acesorios de videojuegos')" class="btn btn-secondary">Acesorios de videojuegos</button>
+                <button type="button" onclick="getProducto('Videojuegos')"
+                    class="btn btn-secondary">Videojuegos</button>
+                <button type="button" onclick="getProducto('Acesorios de videojuegos')"
+                    class="btn btn-secondary">Accesorios de videojuegos</button>
                 <button type="button" onclick="getProducto('Audifonos')" class="btn btn-secondary">Audifonos</button>
             </div>
         </div>
         <div id="MercadoLibre">
+            
         </div>
+        <h4>Carrito de compras</h4>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">A/Q</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody id="items"></tbody>
+            <tfoot>
+                <tr id="footer">
+                    <th scope="row" colspan="5">Que esperas para gastar tu dinero? >:V </th>
+                </tr>
+            </tfoot>
+        </table>
     </div>
+    <template id="template-footer">
+        <th scope="row" colspan="2">Total productos</th>
+        <td>10</td>
+        <td>
+            <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+                vaciar todo
+            </button>
+        </td>
+        <td class="font-weight-bold">$ <span>5000</span></td>
+    </template>
+    <template id="template-carrito">
+        <tr>
+            <th scope="row">id</th>
+            <td>Café</td>
+            <td>1</td>
+            <td>
+                <button class="btn btn-danger btn-sm">
+                    -
+                </button>
+                <button class="btn btn-info btn-sm">
+                    +
+                </button>
+            </td>
+            <td>$ <span>500</span></td>
+        </tr>
+    </template>
 
-    <script src="./assets/dist/js/index.js"></script>
+    <script src="../FrontEnd/assets/dist/js/index.js"></script>
 </body>
+
 </html>
